k8s/app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: app1:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: app1
  labels:
    run: app1
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
  selector:
    app: app1
