k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
spec:
  rules:
  - http:
      paths:
      - path: /app1
        backend:
          serviceName: app1
          servicePort: 80
